--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^5.7.0",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "prisma": "^5.7.0"
   },
   "description": ""
 }
