--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "prisma": "^5.7.0"
+    "graphql-tools": "^9.0.0",
+    "jsonwebtoken": "^9.0.2"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "prisma": "^5.7.1"
+  }
 }
